fixed small UI bugs along with navbar visibility and recipe deletion hiccup

--- a/recipebox-fe/src/App.css
+++ b/recipebox-fe/src/App.css
@@ -99,3 +99,11 @@
 .react-autosuggest__suggestion--highlighted {
   background-color: #ddd;
 }
+
+/* Custom mobile responsiveness */
+
+@media only screen and (max-width: 400px) {
+  .reponsive-margin {
+    margin-top: .5rem;
+  }
+}
